--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -96,3 +96,9 @@ a:hover{
 .font-epkyouka {
     font-family: 'epkyouka';
 }
+
+.font-arial-narrow {
+    font-family: 'Arial Narrow', Arial, sans-serif;
+    font-size: 16px;
+    line-height: 1.3;
+}
