feat: images are sticked to the top when text is longer
Vue devtools module added for developement

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -98,7 +98,7 @@ a:hover{
 }
 
 .font-arial-narrow {
-    font-family: 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Arial Narrow';
     font-size: 16px;
     line-height: 1.3;
 }
